# agent-template

./: .gitignore  README.md  agent.manifest.yaml  copier.yml  pyproject.toml
.github/workflows/: review.yml
template/: .copier-answers.yml.jinja  .editorconfig  README.md.jinja  agent.manifest.yaml  manifest.schema.json  pyproject.toml.jinja
template/.github/workflows/: review.yml
template/api/: server.py
template/mcp/: server.py
tests/: test_smoke.py
