[tool.poetry]
name = "my-agent"
version = "0.1.0"
description = "An 图灵星球 Agent 军团 member agent. Replace this with your own."
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
ruff = "^0.5"
bandit = "^1.7"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
